--- a/course-materials/assignments/HW2.qmd
+++ b/course-materials/assignments/HW2.qmd
@@ -13,7 +13,7 @@ editor_options:
 
 ## Description {#description}
 
-[**In class, we've been discussing strategies and considerations for choosing the right graphic form to represent your data and convey your intended message. Here, you'll apply what we're learning while exploring natural hazards data, courtesy of the [FEMA National Risk Index](https://hazards.fema.gov/nri/){target="_blank"} (NRI)**]{.teal-text}.
+[**In class, we've been discussing strategies and considerations for choosing the right graphic form to represent your data and convey your intended message. Here, you'll apply what we're learning while exploring natural hazards data, courtesy of the [FEMA Resilience Analysis and Planning Tool (RAPT)](https://hazards.fema.gov/nri/){target="_blank"}**]{.teal-text}.
 
 <!-- In class, we've been discussing strategies and considerations for choosing the right graphic form to represent your data and convey your intended message. Here, you'll apply what we're learning to natural hazards and demographics data, courtesy of the **[FEMA National Risk Index](https://hazards.fema.gov/nri/){target="_blank"} (NRI)** and the **[US Census Bureau's American Community Survey](https://www.census.gov/programs-surveys/acs/about.html){target="_blank"} (ACS)**. -->
 
@@ -26,32 +26,29 @@ editor_options:
 
 ### About FEMA's National Risk Index (NRI) for Natural Hazards
 
-[FEMA](https://www.fema.gov/about){target="_blank"} (Federal Emergency Management Agency) is a government agency with a mission of helping people before, during, and after disasters. In 2021, FEMA launched the **[National Risk Index (NRI)](https://hazards.fema.gov/nri/){target="_blank"}**, "a [dataset](https://hazards.fema.gov/nri/data-resources){target="_blank"} and [online tool](https://hazards.fema.gov/nri/map){target="_blank"} to help illustrate the United States communities most at risk for [18 natural hazards](https://hazards.fema.gov/nri/natural-hazards){target="_blank"}".
-
-**Risk** is defined as the potential for negative impacts resulting from natural hazards. It's calculated using the following equation (and illustrated in [this graphic](https://hazards.fema.gov/nri/Content/Images/StaticPageImages/Risk_Index_Calculation.svg){target="_blank"}; read more about [determining risk](https://hazards.fema.gov/nri/determining-risk){target="_blank"}):
+[FEMA](https://www.fema.gov/about){target="_blank"} (Federal Emergency Management Agency) is a government agency with a mission of helping people before, during, and after disasters. In 2021, FEMA launched the **[National Risk Index (NRI)](https://www.fema.gov/flood-maps/products-tools/national-risk-index){target="_blank"}**, a dataset that "provides information for communities most at risk to [18 different natural hazards](https://www.fema.gov/sites/default/files/documents/fema_national-risk-index_methodology-hazards-overview.pdf){target="_blank"}. It offers a baseline risk measurement for expected annual loss, social vulnerability and community resilience at the Census tract or county level. The data helps to validate, measure and better understand your community’s natural hazard risk." **Risk** is defined as the potential for negative impacts resulting from natural hazards. It's calculated using the following equation:
 
 $$Risk\:Index = Expected\:Annual\:Loss \times \frac{Social\:Vulnerability}{Community\:Resilience}$$
 
-NRI provides hazard type-specific scores, as well as a composite score, which adds together the risk from all 18 hazard types. A community's **risk score** is represented by its percentile ranking among all other communities at the same level for Risk, Expected Annual Loss, Social Vulnerability and Community Resilience -- for example, if a given county's Risk Index percentile for a hazard type is 84.32 then its Risk Index value is greater than 84.32% of all US counties. Each community is also assigned a **risk rating**, which is a qualitative rating that describes the community in comparison to all other communities at the same level, ranging from “Very Low” to “Very High.”
+NRI provides hazard type-specific scores, as well as a composite score, which adds together the risk from all 18 hazard types. A community's **risk score** is represented by its percentile ranking among all other communities at the same level for Risk, Expected Annual Loss, Social Vulnerability and Community Resilience -- for example, if a given county's Risk Index percentile for a hazard type is 84.32 then its Risk Index value is greater than 84.32% of all US counties. Each community is also assigned a **risk rating**, which is a qualitative rating that describes the community in comparison to all other communities at the same level, ranging from “Very Low” to “Very High.” You can learn more in the [National Risk Index Data Technical Documentation](https://www.fema.gov/sites/default/files/documents/fema_national-risk-index_technical-documentation.pdf){target="_blank"}.
 
-You can learn more about the NRI at [hazards.fema.gov/nri](https://hazards.fema.gov/nri/learn-more){target="_blank"}.
+In December 2025, FEMA integrated NRI data into the [Resilience Analysis and Planning Tool (RAPT)](https://experience.arcgis.com/experience/0a317e8998534c30a9b2d3861c814d42/){target="_blank"}:
 
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "80%"
 #| fig-align: "center"
-knitr::include_graphics("images/NRI.png")
+knitr::include_graphics("images/RAPT.png")
 ```
 
 ::: {.center-text .gray-text .body-text-s}
-*Screenshot of the [The National Risk Index's interactive mapping and data-based interface](https://hazards.fema.gov/nri/map)*
+*Screenshot of the [Resilience Analysis and Planning Tool (RAPT)](https://experience.arcgis.com/experience/0a317e8998534c30a9b2d3861c814d42/) with the National Risk Index Counties data layer.* 
 :::
 
-#### Accessing NRI Data
+<!-- #### Accessing NRI Data
 
-Data at the county- and census tract-level are available for download in multiple formats (including Shapefiles & CSVs) from NRI's [Data Resources page](https://hazards.fema.gov/nri/data-resources){target="_blank"}.
-
+Data at the county- and census tract-level are available for download in multiple formats (including Shapefiles & CSVs) from NRI's [Data Resources page](https://hazards.fema.gov/nri/data-resources){target="_blank"}. -->
 :::
 
 ### II. Create your `eds240-nri-acs-viz` GitHub repo {#partII}
@@ -73,9 +70,11 @@ For this assignment, you'll only be working with FEMA NRI data. During HW #3, yo
 
 [**Next, let's download the necessary data, and add it to our `eds240-nri-acs-viz` repo:**]{.teal-text}
 
-- [ ] **1.** Download and unzip the data. You'll use the [All Counties - County-level detail (Table)](https://hazards.fema.gov/nri/Content/StaticDocuments/DataDownload//NRI_Table_Counties/NRI_Table_Counties.zip) (2023 Release; accessed on the [NRI Data Resources page](https://hazards.fema.gov/nri/data-resources#csvDownload:~:text=All%20Counties%20%2D%20County%2Dlevel%20detail%20(Table)){target="_blank"}). Unzip the file, then drop the whole `NRI_Table_Counties/` folder into a `data/` folder in your HW repository.
+- [ ] **1.** Navigate to **[RAPT](https://experience.arcgis.com/experience/0a317e8998534c30a9b2d3861c814d42/){target="_blank"}** > click on the **NRI** button in the top menu > find the **National Risk Index Counties** layer > click on the three dots > Export to CSV (**NOTE:** you may need to allow pop-ups in your browser for the data to download). *If you have difficulties downloading the data, you can find a copy on [Google Drive](https://drive.google.com/file/d/1yoavLSBmJIMjVY9fQrT_rg8u6C-3v_v8/view?usp=sharing){target="_blank"}.*
 
-- [ ] **2.** Add your `data/` folder to `.gitignore`, so you don't accidentally push the data to GitHub!
+- [ ] **2.** Drop your csv file into a `data/` folder in your HW repository.
+
+- [ ] **3.** Add your `data/` folder to `.gitignore`, so you don't accidentally push the data to GitHub!
 
 ### IV. Build your visualization {#partIV}
 
@@ -84,7 +83,6 @@ For this assignment, you'll only be working with FEMA NRI data. During HW #3, yo
 ::: {.callout-tip}
 ## BEFORE you start wrangling / building your viz, be sure to...
 
-- **explore the metadata** -- `NRI_Table_Counties/` contains a metadata file named, `NRIDataDictionary.csv`, which describes each of the variables found in the data file (`NRI_Table_Counties.csv`). This is a helpful place to start!
 - **identify / jot down your variables of interest** and consider which data types they are
 - **use online tools like [from Data to Viz](https://www.data-to-viz.com/){target="_blank}** to help determine appropriate graph types, given your variables 
 - **roughly sketch out your plots by hand** (see [why](https://medium.com/@tjanmichela/the-importance-of-sketching-in-data-visualization-78320c62e403){target="_blank"} this step matters!)
@@ -93,10 +91,10 @@ For this assignment, you'll only be working with FEMA NRI data. During HW #3, yo
 Your final visualization should:
 
 - [ ] include data for the 50 US states only (no territories)
-- [ ] include a title (short, descriptive) & subtitle (describes main takeaway) (see [Fundamentals of Data Visualization, Ch 22](https://clauswilke.com/dataviz/figure-titles-captions.html){target="_blank"} for an example), a caption (describes the data source, e.g. "Data: FEMA National Risk Index (2023 Release)"), and alt text (following the formula described in [week 3 discussion](../discussion/week3/.qmd#discussion-materials){target="_blank"}; use the `fig-alt` code chunk option to apply your alt text)
+- [ ] include a title (short, descriptive) & subtitle (describes main takeaway) (see [Fundamentals of Data Visualization, Ch 22](https://clauswilke.com/dataviz/figure-titles-captions.html){target="_blank"} for an example), a caption (describes the data source, e.g. "Data: FEMA National Risk Index (2025 Release)"), and alt text (following the formula you recently practiced in [lab](../lab/LAB-SLIDES-alt-text.qmd#alt-text-formula){target="_blank"}; use the `fig-alt` code chunk option to apply your alt text)
 - [ ] consider and implement strategies for highlighting trends / important information (e.g. arranging data, highlighting data, adjusting scales)
 - [ ] use custom colors (if applicable), rather than ggplot defaults 
-- [ ] have an updated / polished theme (you'll learn more about fine-tuning ggplot themes in [week 4 discussion](../week4.qmd#discussion-materials){target="_blank"}) 
+- [ ] have an updated / polished theme
 
 ::: {.callout-tip}
 ## Is your plot looking squished in your rendered `.qmd` file? Adjust the aspect ratio!
@@ -105,7 +103,7 @@ You can adjust the aspect ratio of your plot (i.e. its width to height ratio) so
 
 ::: {.callout-important}
 ## There is not necessarily one right answer (but don't build a map)!
-There are a number of different chart types that could work for these data and question, *however* we do not intend for you to build a choropleth map (e.g. replicating what you see on the [The National Risk Index's interactive mapping and data-based interface](https://hazards.fema.gov/nri/map){target="_blank"}).
+There are a number of different chart types that could work for these data and question, *however* we do not intend for you to build a choropleth map (e.g. replicating what you see on [RAPT](https://experience.arcgis.com/experience/0a317e8998534c30a9b2d3861c814d42/?dlg=Tour&views=Add-Data){target="_blank"} when the NRI counties layer is added).
 :::
 
 ### V. Answer some questions
